argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "ArgoCD"
    gethomepage.dev/group: "CI/CD"
    gethomepage.dev/icon: "argocd.png"
    gethomepage.dev/ping: "argo.lab.kvd.studio"
spec:
  rules:
    - host: argo.lab.kvd.studio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
